Set the appropriate initial capacity to TimeSeriesProcessor instances when possible